# DIY_WhisperPair

./: .gitignore  LEGAL.md  LICENSE  README.md  examples.py  install.sh  pyproject.toml  requirements.txt  security_demo.py
examples/: scan_devices.py  security_test.py
src/diy_whisperpair.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/whisperpair/: __init__.py  cli.py  client.py  constants.py  crypto.py  protocol.py  scanner.py  tui.py  tui.tcss
tests/: test_protocol.py
